hphp/hack/test/typecheck/contravariance_bad2.php.exp
File "contravariance_bad2.php", line 10, characters 25-34:
Invalid return type (Typing[4336])
File "contravariance_bad2.php", line 10, characters 25-34:
Expected void because this function implicitly returns void
File "contravariance_bad2.php", line 10, characters 60-60:
But got T
